Compilers/og/og_parser.output
   0  $accept : program $end

   1  program : decls
   2          |

   3  decls : decl
   4        | decls decl

   5  decl : var ';'
   6       | func
   7       | proc

   8  idecls : idecl
   9         | idecls idecl

  10  idecl : ivar ';'

  11  block : '{' '}'
  12        | '{' idecls stmts '}'
  13        | '{' idecls '}'
  14        | '{' stmts '}'

  15  stmts : stmt
  16        | stmts stmt

  17  stmt : expr ';'
  18       | tWRITE exprs ';'
  19       | tWRITELN exprs ';'
  20       | tBREAK
  21       | tRETURN exprs ';'
  22       | tRETURN ';'
  23       | tCONT
  24       | iter
  25       | cond
  26       | block

  27  func : expr_type tIDENTIFIER '(' ')'
  28       | auto tIDENTIFIER '(' ')'
  29       | expr_type tIDENTIFIER '(' vardecls ')'
  30       | auto tIDENTIFIER '(' vardecls ')'
  31       | expr_type tIDENTIFIER '(' ')' block
  32       | auto tIDENTIFIER '(' ')' block
  33       | expr_type tIDENTIFIER '(' vardecls ')' block
  34       | auto tIDENTIFIER '(' vardecls ')' block
  35       | public expr_type tIDENTIFIER '(' ')'
  36       | require expr_type tIDENTIFIER '(' ')'
  37       | public auto tIDENTIFIER '(' ')'
  38       | require auto tIDENTIFIER '(' ')'
  39       | public expr_type tIDENTIFIER '(' vardecls ')'
  40       | require expr_type tIDENTIFIER '(' vardecls ')'
  41       | public auto tIDENTIFIER '(' vardecls ')'
  42       | require auto tIDENTIFIER '(' vardecls ')'
  43       | public expr_type tIDENTIFIER '(' ')' block
  44       | require expr_type tIDENTIFIER '(' ')' block
  45       | public auto tIDENTIFIER '(' ')' block
  46       | require auto tIDENTIFIER '(' ')' block
  47       | public expr_type tIDENTIFIER '(' vardecls ')' block
  48       | require expr_type tIDENTIFIER '(' vardecls ')' block
  49       | public auto tIDENTIFIER '(' vardecls ')' block
  50       | require auto tIDENTIFIER '(' vardecls ')' block

  51  proc : tPROC tIDENTIFIER '(' ')'
  52       | tPROC tIDENTIFIER '(' vardecls ')'
  53       | tPROC tIDENTIFIER '(' ')' block
  54       | tPROC tIDENTIFIER '(' vardecls ')' block
  55       | public tPROC tIDENTIFIER '(' ')'
  56       | require tPROC tIDENTIFIER '(' ')'
  57       | public tPROC tIDENTIFIER '(' vardecls ')'
  58       | require tPROC tIDENTIFIER '(' vardecls ')'
  59       | public tPROC tIDENTIFIER '(' ')' block
  60       | require tPROC tIDENTIFIER '(' ')' block
  61       | public tPROC tIDENTIFIER '(' vardecls ')' block
  62       | require tPROC tIDENTIFIER '(' vardecls ')' block

  63  cond : tIF expr tTHEN stmt
  64       | tIF expr tTHEN stmt elif

  65  elif : tELSE stmt
  66       | tELIF expr tTHEN stmt
  67       | tELIF expr tTHEN stmt elif

  68  iter : tFOR ';' ';' tDO stmt
  69       | tFOR forvars ';' ';' tDO stmt
  70       | tFOR ';' exprs ';' tDO stmt
  71       | tFOR ';' ';' exprs tDO stmt
  72       | tFOR forvars ';' exprs ';' tDO stmt
  73       | tFOR forvars ';' ';' exprs tDO stmt
  74       | tFOR ';' exprs ';' exprs tDO stmt
  75       | tFOR forvars ';' exprs ';' exprs tDO stmt
  76       | tFOR exprs ';' ';' tDO stmt
  77       | tFOR exprs ';' exprs ';' tDO stmt
  78       | tFOR exprs ';' ';' exprs tDO stmt
  79       | tFOR exprs ';' exprs ';' exprs tDO stmt

  80  exprs : expr
  81        | exprs ',' expr

  82  expr : tINTEGER
  83       | tDOUBLE
  84       | strs
  85       | '-' expr
  86       | '+' expr
  87       | lval '?'
  88       | expr '+' expr
  89       | expr '-' expr
  90       | expr '*' expr
  91       | expr '/' expr
  92       | expr '%' expr
  93       | expr '<' expr
  94       | expr '>' expr
  95       | expr tGE expr
  96       | expr tLE expr
  97       | expr tNE expr
  98       | expr tEQ expr
  99       | expr tAND expr
 100       | expr tOR expr
 101       | '~' expr
 102       | '(' expr ')'
 103       | tSIZEOF '(' exprs ')'
 104       | lval
 105       | lval '=' expr
 106       | '[' expr ']'
 107       | tIDENTIFIER '(' ')'
 108       | tIDENTIFIER '(' exprs ')'
 109       | tNULLPTR
 110       | tINPUT

 111  vardecls : vardecl
 112           | vardecls ',' vardecl

 113  vardecl : expr_type tIDENTIFIER

 114  forvars : typevars
 115          | tuplevar

 116  ivar : typevar
 117       | tuplevar

 118  typevars : typevar
 119           | typevars ',' typevar

 120  typevar : vardecl
 121          | expr_type tIDENTIFIER '=' expr

 122  tuplevar : auto ids '=' exprs

 123  var : ivar
 124      | public expr_type tIDENTIFIER
 125      | require expr_type tIDENTIFIER
 126      | public expr_type tIDENTIFIER '=' expr
 127      | require expr_type tIDENTIFIER '=' expr
 128      | public auto ids '=' exprs

 129  ids : id
 130      | ids ',' id

 131  id : tIDENTIFIER

 132  lval : id
 133       | expr '[' expr ']'
 134       | expr '@' tINTEGER

 135  expr_type : tINT
 136            | tREAL
 137            | tSTR
 138            | tPTR '<' all_type '>'

 139  all_type : auto
 140           | expr_type

 141  auto : tAUTO

 142  public : tPUBLIC

 143  require : tREQUIRE

 144  strs : tSTRING
 145       | strs tSTRING

state 0
	$accept : . program $end  (0)
	program : .  (2)

	tPUBLIC  shift 1
	tREQUIRE  shift 2
	tAUTO  shift 3
	tINT  shift 4
	tREAL  shift 5
	tSTR  shift 6
	tPTR  shift 7
	tPROC  shift 8
	$end  reduce 2

	program  goto 9
	public  goto 10
	require  goto 11
	var  goto 12
	ivar  goto 13
	tuplevar  goto 14
	vardecl  goto 15
	typevar  goto 16
	decl  goto 17
	func  goto 18
	proc  goto 19
	decls  goto 20
	expr_type  goto 21
	auto  goto 22


state 1
	public : tPUBLIC .  (142)

	.  reduce 142


state 2
	require : tREQUIRE .  (143)

	.  reduce 143


state 3
	auto : tAUTO .  (141)

	.  reduce 141


state 4
	expr_type : tINT .  (135)

	.  reduce 135


state 5
	expr_type : tREAL .  (136)

	.  reduce 136


state 6
	expr_type : tSTR .  (137)

	.  reduce 137


state 7
	expr_type : tPTR . '<' all_type '>'  (138)

	'<'  shift 23
	.  error


state 8
	proc : tPROC . tIDENTIFIER '(' ')'  (51)
	proc : tPROC . tIDENTIFIER '(' vardecls ')'  (52)
	proc : tPROC . tIDENTIFIER '(' ')' block  (53)
	proc : tPROC . tIDENTIFIER '(' vardecls ')' block  (54)

	tIDENTIFIER  shift 24
	.  error


state 9
	$accept : program . $end  (0)

	$end  accept


state 10
	func : public . expr_type tIDENTIFIER '(' ')'  (35)
	func : public . auto tIDENTIFIER '(' ')'  (37)
	func : public . expr_type tIDENTIFIER '(' vardecls ')'  (39)
	func : public . auto tIDENTIFIER '(' vardecls ')'  (41)
	func : public . expr_type tIDENTIFIER '(' ')' block  (43)
	func : public . auto tIDENTIFIER '(' ')' block  (45)
	func : public . expr_type tIDENTIFIER '(' vardecls ')' block  (47)
	func : public . auto tIDENTIFIER '(' vardecls ')' block  (49)
	proc : public . tPROC tIDENTIFIER '(' ')'  (55)
	proc : public . tPROC tIDENTIFIER '(' vardecls ')'  (57)
	proc : public . tPROC tIDENTIFIER '(' ')' block  (59)
	proc : public . tPROC tIDENTIFIER '(' vardecls ')' block  (61)
	var : public . expr_type tIDENTIFIER  (124)
	var : public . expr_type tIDENTIFIER '=' expr  (126)
	var : public . auto ids '=' exprs  (128)

	tAUTO  shift 3
	tINT  shift 4
	tREAL  shift 5
	tSTR  shift 6
	tPTR  shift 7
	tPROC  shift 25
	.  error

	expr_type  goto 26
	auto  goto 27


state 11
	func : require . expr_type tIDENTIFIER '(' ')'  (36)
	func : require . auto tIDENTIFIER '(' ')'  (38)
	func : require . expr_type tIDENTIFIER '(' vardecls ')'  (40)
	func : require . auto tIDENTIFIER '(' vardecls ')'  (42)
	func : require . expr_type tIDENTIFIER '(' ')' block  (44)
	func : require . auto tIDENTIFIER '(' ')' block  (46)
	func : require . expr_type tIDENTIFIER '(' vardecls ')' block  (48)
	func : require . auto tIDENTIFIER '(' vardecls ')' block  (50)
	proc : require . tPROC tIDENTIFIER '(' ')'  (56)
	proc : require . tPROC tIDENTIFIER '(' vardecls ')'  (58)
	proc : require . tPROC tIDENTIFIER '(' ')' block  (60)
	proc : require . tPROC tIDENTIFIER '(' vardecls ')' block  (62)
	var : require . expr_type tIDENTIFIER  (125)
	var : require . expr_type tIDENTIFIER '=' expr  (127)

	tAUTO  shift 3
	tINT  shift 4
	tREAL  shift 5
	tSTR  shift 6
	tPTR  shift 7
	tPROC  shift 28
	.  error

	expr_type  goto 29
	auto  goto 30


state 12
	decl : var . ';'  (5)

	';'  shift 31
	.  error


state 13
	var : ivar .  (123)

	.  reduce 123


state 14
	ivar : tuplevar .  (117)

	.  reduce 117


state 15
	typevar : vardecl .  (120)

	.  reduce 120


state 16
	ivar : typevar .  (116)

	.  reduce 116


state 17
	decls : decl .  (3)

	.  reduce 3


state 18
	decl : func .  (6)

	.  reduce 6


state 19
	decl : proc .  (7)

	.  reduce 7


state 20
	program : decls .  (1)
	decls : decls . decl  (4)

	tPUBLIC  shift 1
	tREQUIRE  shift 2
	tAUTO  shift 3
	tINT  shift 4
	tREAL  shift 5
	tSTR  shift 6
	tPTR  shift 7
	tPROC  shift 8
	$end  reduce 1

	public  goto 10
	require  goto 11
	var  goto 12
	ivar  goto 13
	tuplevar  goto 14
	vardecl  goto 15
	typevar  goto 16
	decl  goto 32
	func  goto 18
	proc  goto 19
	expr_type  goto 21
	auto  goto 22


state 21
	func : expr_type . tIDENTIFIER '(' ')'  (27)
	func : expr_type . tIDENTIFIER '(' vardecls ')'  (29)
	func : expr_type . tIDENTIFIER '(' ')' block  (31)
	func : expr_type . tIDENTIFIER '(' vardecls ')' block  (33)
	vardecl : expr_type . tIDENTIFIER  (113)
	typevar : expr_type . tIDENTIFIER '=' expr  (121)

	tIDENTIFIER  shift 33
	.  error


state 22
	func : auto . tIDENTIFIER '(' ')'  (28)
	func : auto . tIDENTIFIER '(' vardecls ')'  (30)
	func : auto . tIDENTIFIER '(' ')' block  (32)
	func : auto . tIDENTIFIER '(' vardecls ')' block  (34)
	tuplevar : auto . ids '=' exprs  (122)

	tIDENTIFIER  shift 34
	.  error

	id  goto 35
	ids  goto 36


state 23
	expr_type : tPTR '<' . all_type '>'  (138)

	tAUTO  shift 3
	tINT  shift 4
	tREAL  shift 5
	tSTR  shift 6
	tPTR  shift 7
	.  error

	expr_type  goto 37
	all_type  goto 38
	auto  goto 39


state 24
	proc : tPROC tIDENTIFIER . '(' ')'  (51)
	proc : tPROC tIDENTIFIER . '(' vardecls ')'  (52)
	proc : tPROC tIDENTIFIER . '(' ')' block  (53)
	proc : tPROC tIDENTIFIER . '(' vardecls ')' block  (54)

	'('  shift 40
	.  error


state 25
	proc : public tPROC . tIDENTIFIER '(' ')'  (55)
	proc : public tPROC . tIDENTIFIER '(' vardecls ')'  (57)
	proc : public tPROC . tIDENTIFIER '(' ')' block  (59)
	proc : public tPROC . tIDENTIFIER '(' vardecls ')' block  (61)

	tIDENTIFIER  shift 41
	.  error


state 26
	func : public expr_type . tIDENTIFIER '(' ')'  (35)
	func : public expr_type . tIDENTIFIER '(' vardecls ')'  (39)
	func : public expr_type . tIDENTIFIER '(' ')' block  (43)
	func : public expr_type . tIDENTIFIER '(' vardecls ')' block  (47)
	var : public expr_type . tIDENTIFIER  (124)
	var : public expr_type . tIDENTIFIER '=' expr  (126)

	tIDENTIFIER  shift 42
	.  error


state 27
	func : public auto . tIDENTIFIER '(' ')'  (37)
	func : public auto . tIDENTIFIER '(' vardecls ')'  (41)
	func : public auto . tIDENTIFIER '(' ')' block  (45)
	func : public auto . tIDENTIFIER '(' vardecls ')' block  (49)
	var : public auto . ids '=' exprs  (128)

	tIDENTIFIER  shift 43
	.  error

	id  goto 35
	ids  goto 44


state 28
	proc : require tPROC . tIDENTIFIER '(' ')'  (56)
	proc : require tPROC . tIDENTIFIER '(' vardecls ')'  (58)
	proc : require tPROC . tIDENTIFIER '(' ')' block  (60)
	proc : require tPROC . tIDENTIFIER '(' vardecls ')' block  (62)

	tIDENTIFIER  shift 45
	.  error


state 29
	func : require expr_type . tIDENTIFIER '(' ')'  (36)
	func : require expr_type . tIDENTIFIER '(' vardecls ')'  (40)
	func : require expr_type . tIDENTIFIER '(' ')' block  (44)
	func : require expr_type . tIDENTIFIER '(' vardecls ')' block  (48)
	var : require expr_type . tIDENTIFIER  (125)
	var : require expr_type . tIDENTIFIER '=' expr  (127)

	tIDENTIFIER  shift 46
	.  error


state 30
	func : require auto . tIDENTIFIER '(' ')'  (38)
	func : require auto . tIDENTIFIER '(' vardecls ')'  (42)
	func : require auto . tIDENTIFIER '(' ')' block  (46)
	func : require auto . tIDENTIFIER '(' vardecls ')' block  (50)

	tIDENTIFIER  shift 47
	.  error


state 31
	decl : var ';' .  (5)

	.  reduce 5


state 32
	decls : decls decl .  (4)

	.  reduce 4


state 33
	func : expr_type tIDENTIFIER . '(' ')'  (27)
	func : expr_type tIDENTIFIER . '(' vardecls ')'  (29)
	func : expr_type tIDENTIFIER . '(' ')' block  (31)
	func : expr_type tIDENTIFIER . '(' vardecls ')' block  (33)
	vardecl : expr_type tIDENTIFIER .  (113)
	typevar : expr_type tIDENTIFIER . '=' expr  (121)

	'='  shift 48
	'('  shift 49
	';'  reduce 113


state 34
	func : auto tIDENTIFIER . '(' ')'  (28)
	func : auto tIDENTIFIER . '(' vardecls ')'  (30)
	func : auto tIDENTIFIER . '(' ')' block  (32)
	func : auto tIDENTIFIER . '(' vardecls ')' block  (34)
	id : tIDENTIFIER .  (131)

	'('  shift 50
	'='  reduce 131
	','  reduce 131


state 35
	ids : id .  (129)

	.  reduce 129


state 36
	tuplevar : auto ids . '=' exprs  (122)
	ids : ids . ',' id  (130)

	'='  shift 51
	','  shift 52
	.  error


state 37
	all_type : expr_type .  (140)

	.  reduce 140


state 38
	expr_type : tPTR '<' all_type . '>'  (138)

	'>'  shift 53
	.  error


state 39
	all_type : auto .  (139)

	.  reduce 139


state 40
	proc : tPROC tIDENTIFIER '(' . ')'  (51)
	proc : tPROC tIDENTIFIER '(' . vardecls ')'  (52)
	proc : tPROC tIDENTIFIER '(' . ')' block  (53)
	proc : tPROC tIDENTIFIER '(' . vardecls ')' block  (54)

	tINT  shift 4
	tREAL  shift 5
	tSTR  shift 6
	tPTR  shift 7
	')'  shift 54
	.  error

	vardecl  goto 55
	vardecls  goto 56
	expr_type  goto 57


state 41
	proc : public tPROC tIDENTIFIER . '(' ')'  (55)
	proc : public tPROC tIDENTIFIER . '(' vardecls ')'  (57)
	proc : public tPROC tIDENTIFIER . '(' ')' block  (59)
	proc : public tPROC tIDENTIFIER . '(' vardecls ')' block  (61)

	'('  shift 58
	.  error


state 42
	func : public expr_type tIDENTIFIER . '(' ')'  (35)
	func : public expr_type tIDENTIFIER . '(' vardecls ')'  (39)
	func : public expr_type tIDENTIFIER . '(' ')' block  (43)
	func : public expr_type tIDENTIFIER . '(' vardecls ')' block  (47)
	var : public expr_type tIDENTIFIER .  (124)
	var : public expr_type tIDENTIFIER . '=' expr  (126)

	'='  shift 59
	'('  shift 60
	';'  reduce 124


state 43
	func : public auto tIDENTIFIER . '(' ')'  (37)
	func : public auto tIDENTIFIER . '(' vardecls ')'  (41)
	func : public auto tIDENTIFIER . '(' ')' block  (45)
	func : public auto tIDENTIFIER . '(' vardecls ')' block  (49)
	id : tIDENTIFIER .  (131)

	'('  shift 61
	'='  reduce 131
	','  reduce 131


state 44
	var : public auto ids . '=' exprs  (128)
	ids : ids . ',' id  (130)

	'='  shift 62
	','  shift 52
	.  error


state 45
	proc : require tPROC tIDENTIFIER . '(' ')'  (56)
	proc : require tPROC tIDENTIFIER . '(' vardecls ')'  (58)
	proc : require tPROC tIDENTIFIER . '(' ')' block  (60)
	proc : require tPROC tIDENTIFIER . '(' vardecls ')' block  (62)

	'('  shift 63
	.  error


state 46
	func : require expr_type tIDENTIFIER . '(' ')'  (36)
	func : require expr_type tIDENTIFIER . '(' vardecls ')'  (40)
	func : require expr_type tIDENTIFIER . '(' ')' block  (44)
	func : require expr_type tIDENTIFIER . '(' vardecls ')' block  (48)
	var : require expr_type tIDENTIFIER .  (125)
	var : require expr_type tIDENTIFIER . '=' expr  (127)

	'='  shift 64
	'('  shift 65
	';'  reduce 125


state 47
	func : require auto tIDENTIFIER . '(' ')'  (38)
	func : require auto tIDENTIFIER . '(' vardecls ')'  (42)
	func : require auto tIDENTIFIER . '(' ')' block  (46)
	func : require auto tIDENTIFIER . '(' vardecls ')' block  (50)

	'('  shift 66
	.  error


state 48
	typevar : expr_type tIDENTIFIER '=' . expr  (121)

	tINTEGER  shift 67
	tDOUBLE  shift 68
	tIDENTIFIER  shift 69
	tSTRING  shift 70
	tSIZEOF  shift 71
	tINPUT  shift 72
	tNULLPTR  shift 73
	'+'  shift 74
	'-'  shift 75
	'~'  shift 76
	'['  shift 77
	'('  shift 78
	.  error

	expr  goto 79
	lval  goto 80
	strs  goto 81
	id  goto 82


state 49
	func : expr_type tIDENTIFIER '(' . ')'  (27)
	func : expr_type tIDENTIFIER '(' . vardecls ')'  (29)
	func : expr_type tIDENTIFIER '(' . ')' block  (31)
	func : expr_type tIDENTIFIER '(' . vardecls ')' block  (33)

	tINT  shift 4
	tREAL  shift 5
	tSTR  shift 6
	tPTR  shift 7
	')'  shift 83
	.  error

	vardecl  goto 55
	vardecls  goto 84
	expr_type  goto 57


state 50
	func : auto tIDENTIFIER '(' . ')'  (28)
	func : auto tIDENTIFIER '(' . vardecls ')'  (30)
	func : auto tIDENTIFIER '(' . ')' block  (32)
	func : auto tIDENTIFIER '(' . vardecls ')' block  (34)

	tINT  shift 4
	tREAL  shift 5
	tSTR  shift 6
	tPTR  shift 7
	')'  shift 85
	.  error

	vardecl  goto 55
	vardecls  goto 86
	expr_type  goto 57


state 51
	tuplevar : auto ids '=' . exprs  (122)

	tINTEGER  shift 67
	tDOUBLE  shift 68
	tIDENTIFIER  shift 69
	tSTRING  shift 70
	tSIZEOF  shift 71
	tINPUT  shift 72
	tNULLPTR  shift 73
	'+'  shift 74
	'-'  shift 75
	'~'  shift 76
	'['  shift 77
	'('  shift 78
	.  error

	exprs  goto 87
	expr  goto 88
	lval  goto 80
	strs  goto 81
	id  goto 82


state 52
	ids : ids ',' . id  (130)

	tIDENTIFIER  shift 89
	.  error

	id  goto 90


state 53
	expr_type : tPTR '<' all_type '>' .  (138)

	.  reduce 138


state 54
	proc : tPROC tIDENTIFIER '(' ')' .  (51)
	proc : tPROC tIDENTIFIER '(' ')' . block  (53)

	'{'  shift 91
	$end  reduce 51
	tPUBLIC  reduce 51
	tREQUIRE  reduce 51
	tAUTO  reduce 51
	tINT  reduce 51
	tREAL  reduce 51
	tSTR  reduce 51
	tPTR  reduce 51
	tPROC  reduce 51

	block  goto 92


state 55
	vardecls : vardecl .  (111)

	.  reduce 111


state 56
	proc : tPROC tIDENTIFIER '(' vardecls . ')'  (52)
	proc : tPROC tIDENTIFIER '(' vardecls . ')' block  (54)
	vardecls : vardecls . ',' vardecl  (112)

	')'  shift 93
	','  shift 94
	.  error


state 57
	vardecl : expr_type . tIDENTIFIER  (113)

	tIDENTIFIER  shift 95
	.  error


state 58
	proc : public tPROC tIDENTIFIER '(' . ')'  (55)
	proc : public tPROC tIDENTIFIER '(' . vardecls ')'  (57)
	proc : public tPROC tIDENTIFIER '(' . ')' block  (59)
	proc : public tPROC tIDENTIFIER '(' . vardecls ')' block  (61)

	tINT  shift 4
	tREAL  shift 5
	tSTR  shift 6
	tPTR  shift 7
	')'  shift 96
	.  error

	vardecl  goto 55
	vardecls  goto 97
	expr_type  goto 57


state 59
	var : public expr_type tIDENTIFIER '=' . expr  (126)

	tINTEGER  shift 67
	tDOUBLE  shift 68
	tIDENTIFIER  shift 69
	tSTRING  shift 70
	tSIZEOF  shift 71
	tINPUT  shift 72
	tNULLPTR  shift 73
	'+'  shift 74
	'-'  shift 75
	'~'  shift 76
	'['  shift 77
	'('  shift 78
	.  error

	expr  goto 98
	lval  goto 80
	strs  goto 81
	id  goto 82


state 60
	func : public expr_type tIDENTIFIER '(' . ')'  (35)
	func : public expr_type tIDENTIFIER '(' . vardecls ')'  (39)
	func : public expr_type tIDENTIFIER '(' . ')' block  (43)
	func : public expr_type tIDENTIFIER '(' . vardecls ')' block  (47)

	tINT  shift 4
	tREAL  shift 5
	tSTR  shift 6
	tPTR  shift 7
	')'  shift 99
	.  error

	vardecl  goto 55
	vardecls  goto 100
	expr_type  goto 57


state 61
	func : public auto tIDENTIFIER '(' . ')'  (37)
	func : public auto tIDENTIFIER '(' . vardecls ')'  (41)
	func : public auto tIDENTIFIER '(' . ')' block  (45)
	func : public auto tIDENTIFIER '(' . vardecls ')' block  (49)

	tINT  shift 4
	tREAL  shift 5
	tSTR  shift 6
	tPTR  shift 7
	')'  shift 101
	.  error

	vardecl  goto 55
	vardecls  goto 102
	expr_type  goto 57


state 62
	var : public auto ids '=' . exprs  (128)

	tINTEGER  shift 67
	tDOUBLE  shift 68
	tIDENTIFIER  shift 69
	tSTRING  shift 70
	tSIZEOF  shift 71
	tINPUT  shift 72
	tNULLPTR  shift 73
	'+'  shift 74
	'-'  shift 75
	'~'  shift 76
	'['  shift 77
	'('  shift 78
	.  error

	exprs  goto 103
	expr  goto 88
	lval  goto 80
	strs  goto 81
	id  goto 82


state 63
	proc : require tPROC tIDENTIFIER '(' . ')'  (56)
	proc : require tPROC tIDENTIFIER '(' . vardecls ')'  (58)
	proc : require tPROC tIDENTIFIER '(' . ')' block  (60)
	proc : require tPROC tIDENTIFIER '(' . vardecls ')' block  (62)

	tINT  shift 4
	tREAL  shift 5
	tSTR  shift 6
	tPTR  shift 7
	')'  shift 104
	.  error

	vardecl  goto 55
	vardecls  goto 105
	expr_type  goto 57


state 64
	var : require expr_type tIDENTIFIER '=' . expr  (127)

	tINTEGER  shift 67
	tDOUBLE  shift 68
	tIDENTIFIER  shift 69
	tSTRING  shift 70
	tSIZEOF  shift 71
	tINPUT  shift 72
	tNULLPTR  shift 73
	'+'  shift 74
	'-'  shift 75
	'~'  shift 76
	'['  shift 77
	'('  shift 78
	.  error

	expr  goto 106
	lval  goto 80
	strs  goto 81
	id  goto 82


state 65
	func : require expr_type tIDENTIFIER '(' . ')'  (36)
	func : require expr_type tIDENTIFIER '(' . vardecls ')'  (40)
	func : require expr_type tIDENTIFIER '(' . ')' block  (44)
	func : require expr_type tIDENTIFIER '(' . vardecls ')' block  (48)

	tINT  shift 4
	tREAL  shift 5
	tSTR  shift 6
	tPTR  shift 7
	')'  shift 107
	.  error

	vardecl  goto 55
	vardecls  goto 108
	expr_type  goto 57


state 66
	func : require auto tIDENTIFIER '(' . ')'  (38)
	func : require auto tIDENTIFIER '(' . vardecls ')'  (42)
	func : require auto tIDENTIFIER '(' . ')' block  (46)
	func : require auto tIDENTIFIER '(' . vardecls ')' block  (50)

	tINT  shift 4
	tREAL  shift 5
	tSTR  shift 6
	tPTR  shift 7
	')'  shift 109
	.  error

	vardecl  goto 55
	vardecls  goto 110
	expr_type  goto 57


state 67
	expr : tINTEGER .  (82)

	.  reduce 82


state 68
	expr : tDOUBLE .  (83)

	.  reduce 83


state 69
	expr : tIDENTIFIER . '(' ')'  (107)
	expr : tIDENTIFIER . '(' exprs ')'  (108)
	id : tIDENTIFIER .  (131)

	'('  shift 111
	tTHEN  reduce 131
	tDO  reduce 131
	tAND  reduce 131
	tOR  reduce 131
	'='  reduce 131
	tGE  reduce 131
	tLE  reduce 131
	'>'  reduce 131
	'<'  reduce 131
	tEQ  reduce 131
	tNE  reduce 131
	'+'  reduce 131
	'-'  reduce 131
	'*'  reduce 131
	'/'  reduce 131
	'%'  reduce 131
	'['  reduce 131
	'@'  reduce 131
	';'  reduce 131
	')'  reduce 131
	','  reduce 131
	'?'  reduce 131
	']'  reduce 131


state 70
	strs : tSTRING .  (144)

	.  reduce 144


state 71
	expr : tSIZEOF . '(' exprs ')'  (103)

	'('  shift 112
	.  error


state 72
	expr : tINPUT .  (110)

	.  reduce 110


state 73
	expr : tNULLPTR .  (109)

	.  reduce 109


state 74
	expr : '+' . expr  (86)

	tINTEGER  shift 67
	tDOUBLE  shift 68
	tIDENTIFIER  shift 69
	tSTRING  shift 70
	tSIZEOF  shift 71
	tINPUT  shift 72
	tNULLPTR  shift 73
	'+'  shift 74
	'-'  shift 75
	'~'  shift 76
	'['  shift 77
	'('  shift 78
	.  error

	expr  goto 113
	lval  goto 80
	strs  goto 81
	id  goto 82


state 75
	expr : '-' . expr  (85)

	tINTEGER  shift 67
	tDOUBLE  shift 68
	tIDENTIFIER  shift 69
	tSTRING  shift 70
	tSIZEOF  shift 71
	tINPUT  shift 72
	tNULLPTR  shift 73
	'+'  shift 74
	'-'  shift 75
	'~'  shift 76
	'['  shift 77
	'('  shift 78
	.  error

	expr  goto 114
	lval  goto 80
	strs  goto 81
	id  goto 82


state 76
	expr : '~' . expr  (101)

	tINTEGER  shift 67
	tDOUBLE  shift 68
	tIDENTIFIER  shift 69
	tSTRING  shift 70
	tSIZEOF  shift 71
	tINPUT  shift 72
	tNULLPTR  shift 73
	'+'  shift 74
	'-'  shift 75
	'~'  shift 76
	'['  shift 77
	'('  shift 78
	.  error

	expr  goto 115
	lval  goto 80
	strs  goto 81
	id  goto 82


state 77
	expr : '[' . expr ']'  (106)

	tINTEGER  shift 67
	tDOUBLE  shift 68
	tIDENTIFIER  shift 69
	tSTRING  shift 70
	tSIZEOF  shift 71
	tINPUT  shift 72
	tNULLPTR  shift 73
	'+'  shift 74
	'-'  shift 75
	'~'  shift 76
	'['  shift 77
	'('  shift 78
	.  error

	expr  goto 116
	lval  goto 80
	strs  goto 81
	id  goto 82


state 78
	expr : '(' . expr ')'  (102)

	tINTEGER  shift 67
	tDOUBLE  shift 68
	tIDENTIFIER  shift 69
	tSTRING  shift 70
	tSIZEOF  shift 71
	tINPUT  shift 72
	tNULLPTR  shift 73
	'+'  shift 74
	'-'  shift 75
	'~'  shift 76
	'['  shift 77
	'('  shift 78
	.  error

	expr  goto 117
	lval  goto 80
	strs  goto 81
	id  goto 82


state 79
	expr : expr . '+' expr  (88)
	expr : expr . '-' expr  (89)
	expr : expr . '*' expr  (90)
	expr : expr . '/' expr  (91)
	expr : expr . '%' expr  (92)
	expr : expr . '<' expr  (93)
	expr : expr . '>' expr  (94)
	expr : expr . tGE expr  (95)
	expr : expr . tLE expr  (96)
	expr : expr . tNE expr  (97)
	expr : expr . tEQ expr  (98)
	expr : expr . tAND expr  (99)
	expr : expr . tOR expr  (100)
	typevar : expr_type tIDENTIFIER '=' expr .  (121)
	lval : expr . '[' expr ']'  (133)
	lval : expr . '@' tINTEGER  (134)

	tAND  shift 118
	tOR  shift 119
	tGE  shift 120
	tLE  shift 121
	'>'  shift 122
	'<'  shift 123
	tEQ  shift 124
	tNE  shift 125
	'+'  shift 126
	'-'  shift 127
	'*'  shift 128
	'/'  shift 129
	'%'  shift 130
	'['  shift 131
	'@'  shift 132
	';'  reduce 121
	','  reduce 121


state 80
	expr : lval . '?'  (87)
	expr : lval .  (104)
	expr : lval . '=' expr  (105)

	'='  shift 133
	'?'  shift 134
	tTHEN  reduce 104
	tDO  reduce 104
	tAND  reduce 104
	tOR  reduce 104
	tGE  reduce 104
	tLE  reduce 104
	'>'  reduce 104
	'<'  reduce 104
	tEQ  reduce 104
	tNE  reduce 104
	'+'  reduce 104
	'-'  reduce 104
	'*'  reduce 104
	'/'  reduce 104
	'%'  reduce 104
	'['  reduce 104
	'@'  reduce 104
	';'  reduce 104
	')'  reduce 104
	','  reduce 104
	']'  reduce 104


state 81
	expr : strs .  (84)
	strs : strs . tSTRING  (145)

	tSTRING  shift 135
	tTHEN  reduce 84
	tDO  reduce 84
	tAND  reduce 84
	tOR  reduce 84
	tGE  reduce 84
	tLE  reduce 84
	'>'  reduce 84
	'<'  reduce 84
	tEQ  reduce 84
	tNE  reduce 84
	'+'  reduce 84
	'-'  reduce 84
	'*'  reduce 84
	'/'  reduce 84
	'%'  reduce 84
	'['  reduce 84
	'@'  reduce 84
	';'  reduce 84
	')'  reduce 84
	','  reduce 84
	']'  reduce 84


state 82
	lval : id .  (132)

	.  reduce 132

